# khorgosh

./: CMakeLists.txt  pyproject.toml
.github/workflows/: ci.yml.disabled
docs/dynamic/: hnsw_dynamic.md  ivf_dynamic.md
docs/optimizations/: PYPI_CHECKLIST.md  QUICKSTART_PYPI.md  comprehensive_optimization_guide.md  khorgosh_analysis.md  optimization_opportunities.md  pypi_packaging_roadmap.md  python_api_design.md  python_bindings_implementation.md  threading_comparison_svs.md  vamana_analysis.md  vamana_search_deep_dive.md
docs/pybindings/: cpp_binding_details.md  python_api.md
include/rabitqlib/fastscan/: fastscan.hpp  highacc_fastscan.hpp
include/rabitqlib/index/: estimator.hpp
include/rabitqlib/index/hnsw/: hnsw.hpp
include/rabitqlib/index/ivf/: initializer.hpp  ivf.hpp
include/rabitqlib/quantization/: pack_excode.hpp  rabitq_impl.hpp
include/rabitqlib/simd/: dispatch.hpp  fastscan_dispatch.hpp  pack_excode_dispatch.hpp  rotator_dispatch.hpp  space_dispatch.hpp  warmup_dispatch.hpp
include/rabitqlib/utils/: cpu_features.hpp  rotator.hpp  space.hpp  warmup_space.hpp
python_bindings/: CMakeLists.txt  hnsw_bindings.cpp  ivf_bindings.cpp
sample/cpp/: CMakeLists.txt  hnsw_rabitq_indexing.cpp
sample/python/: hnsw_rabitq_indexing.py  ivf_rabitq_indexing.py  symqg_indexing.py  utils.py
src/index/: hnsw_search_avx2.cpp  hnsw_search_avx2_kernels.hpp  hnsw_search_avx512_core.cpp  hnsw_search_avx512_kernels.hpp  hnsw_search_avx512_popcnt.cpp
src/simd/: dispatch.cpp  fastscan_avx2.cpp  fastscan_avx512.cpp  pack_excode_avx2.cpp  pack_excode_avx512.cpp  pack_excode_kernels.hpp  rotator_avx2.cpp  rotator_avx512.cpp  space_avx2.cpp  space_avx512.cpp  space_excode_avx2.cpp  space_excode_avx512.cpp  warmup_avx2.cpp  warmup_avx512.cpp
src/utils/: cpu_features.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: bit_pack_unpack_test.cpp
tests/unit/quantization/: rabitq_test.cpp
tests/unit/rabitqlib/utils/: cpu_features_test.cpp  space_test.cpp
tests/unit/utils/: test_rotator.cpp  test_space.cpp
